# pd-excel-talk

./: .gitignore  app.py  pyproject.toml
.streamlit/: config.toml
src/: ai.py  chat_interface.py  data_processing.py
